# IsRoot_Playground

./: Cargo.toml  Readme.md
benches/: is_root_benchmark.rs  nbody_benchmark.rs
src/: CpuMonteCarloRoot.rs  SimdIsRoot.rs  cpu_is_root.rs  is_root.rs  lib.rs  main.rs  nbody.rs  root.rs  simd_is_root.rs  wgpu_is_root.rs  wgpu_is_root_shader.wgsl
src/is_root/: cpu_is_root.rs  mod.rs  simd_is_root.rs  wgpu_is_root.rs
src/nbody/: mod.rs  nbody.rs  nbody.wgsl  nbody_cpu.rs  nbody_gpu.rs
