[package]
name = "monte_carlo_root"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "26.0.1"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
bytemuck = "1.23.1"
futures = "0.3.31"
futures-channel = "0.3.31"
rand = "0.9.2"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async", "async_futures"] }

[[bench]]
name = "is_root_benchmark"
harness = false

[[bench]]
name = "nbody_benchmark"
harness = false